Fix spacing inputs

--- a/web/src/pages/TeacherForm/styles.css
+++ b/web/src/pages/TeacherForm/styles.css
@@ -38,8 +38,12 @@
     border-bottom: 1px solid var(--color-line-in-white);
 }
 
-#page-teacher-form main fieldset legend .input-block + .textarea-block {
-    margin-top: 2.4rem;
+#page-teacher-form main fieldset .input-block + .input-block {
+    margin-top: 1.4rem;
+}
+
+#page-teacher-form main fieldset .input-block + .textarea-block {
+margin-top: 2.4rem;
 }
 
 #page-teacher-form main label {
